NEW:
	Engine:
		Converted Aircraft CruiseAltitude to world coordinates.
		Converted Health Radius to world coordinates.
		Converted production exits to world coordinates.
		Converted weapon projectiles to world coordinates.
		Converted actor speed to world coordinates.
	Mod / Custom map compatibility:
		Altitude is no longer parsed from actor templates in maps. Specify CenterPosition instead.
		Run `OpenRA.Utility.exe --upgrade-mod <mod> 20131223` to automatically upgrade mod rules.
		Run `OpenRA.Utility.exe --upgrade-map <map path> 20131223` to automatically upgrade custom map rules.
	Dune 2000:
		Added the Atreides grenadier from the 1.06 patch.

20131223:
	All mods:
		Fixed dead units sometimes exploding or leaving husks when they weren't in the world.
		Added hover and disabled button states [RA / D2K / TS]
		Added double click start support to the replay browser.
		Fixed low projectiles not colliding with walls.
		Fixed double-click selection priority glitches.
		Improved UI decorations (selection boxes, target lines, etc) in pixel double mode.
		Added additional stand animations to infantry [RA / TD]
		Added the ability to double click select maps and music.
		Fixed base attack notification playing when allied engineers repaired your buildings.
		Improved the ingame chat interface and input, with it defaulting to Team Chat.
		Redesigned the settings panel.
		Re-added move flashes.
		Added a setting to always display unit status bars (can also be toggled by hotkey).
		Added a setting for team health bar colors.
		Added a new hotkey to select all units on screen (default: CTRL + A).
		Added a new hotkey to jump to production buildings (default: TAB).
		Changed default hotkey (PageUp/Down) for build palette cycling and made reverse user configurable.
		Improved shroud/fog rendering.
	Asset Browser:
		Fixed crashes when trying to load invalid filenames or sprites with just 1 frame.
		Added support for all sprite types.