@@ -249,4 +249,4 @@
 	WithCrumbleOverlay:
 	Huntable:
 	LuaScriptEvents:
-
+	Demolishable:
