@@ -384,6 +384,7 @@
 	Sellable:
 	Guardable:
 	BodyOrientation:
+	Demolishable:
 
 WALL:
 	Inherits: ^WALL
